fixing some overflow problems

--- a/app/styles/item.css
+++ b/app/styles/item.css
@@ -238,9 +238,9 @@ Inline images (TODO show these only when image is larger than available space) *
 	left: 0;
 	right: 0;
 	border: none;
-	overflow: scroll;
+	overflow: auto;
 	width: 100%;
-	height: 100%;
+	height: 98%;
 }
 .touchDevice .modal .iframeContainer {
 	/* TODO make sure this class is being applied */
